[gd_scene format=3 uid="uid://xdl4mrc4p3qy"]

[ext_resource type="Script" uid="uid://bc75j1ism3hem" path="res://scenes/tools/sword_scene/sword.gd" id="1_0o58g"]
[ext_resource type="Texture2D" uid="uid://coh1chcl1j7qk" path="res://assets/Elements/Tools/Sword.png" id="1_mumg7"]
[ext_resource type="Script" uid="uid://cmy826k35rpkn" path="res://components/hitarea2d.gd" id="2_4mytq"]
[ext_resource type="Texture2D" uid="uid://dlfb1r7qx22b2" path="res://assets/Characters/Human/ATTACK/slash-no-impact.png" id="2_4s8gn"]
[ext_resource type="Texture2D" uid="uid://cf8g4cybaphh0" path="res://assets/Characters/Human/ATTACK/slash.png" id="2_sa7wp"]
[ext_resource type="Texture2D" uid="uid://h125toxei1hu" path="res://assets/Characters/Human/ATTACK/slash3.png" id="8_r0p6s"]

[sub_resource type="Animation" id="Animation_4s8gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HitArea2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VFX:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VFX2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VFX2:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VFX2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite/HitArea2D:monitoring")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite/HitArea2D:monitorable")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VFX2:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.43633232]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VFX2:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("VFX3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VFX3:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite/HitArea2D/CollisionShape2D:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite/HitArea2D/CollisionShape2D:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1mmp0"]
resource_name = "parry"
length = 0.44445
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.055555556, 0.27777776, 0.44444445),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -3), Vector2(10, -1), Vector2(10, -1), Vector2(1, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.055555556, 0.27777776, 0.44444445),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 2.530727415391778, 2.530727415391778, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.027777778, 0.055555556, 0.27777776, 0.44444445),
"transitions": PackedFloat32Array(1, -2, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.245, 1.21), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0o58g"]
resource_name = "slash"
length = 0.44445
step = 0.055555556
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.055555556, 0.16666667, 0.22222222, 0.2777778, 0.44444442),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -3), Vector2(-9, 1), Vector2(-10, 2), Vector2(23, -2), Vector2(4, 11), Vector2(4, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.055555556, 0.16666667, 0.22222222, 0.44444445),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.5),
"update": 0,
"values": [0.0, -0.7853982, -1.5707964, 0.7853982, 2.6179938779914944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.22222222, 0.44444442),
"transitions": PackedFloat32Array(1, 2, 0.5, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.75), Vector2(1.675, 1.15), Vector2(0.8, 1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HitArea2D/CollisionShape2D:disabled")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.11111112, 0.16666667, 0.2777778, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ComboTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2777778),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/HitArea2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.11111112, 0.16666667, 0.2777778, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/HitArea2D:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.11111112, 0.16666667, 0.2777778, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VFX2:visible")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.16666666, 0.22222222, 0.3888889),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VFX2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.16666666, 0.22222222, 0.2777778),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(-11, 6), Vector2(38, -1.0000005), Vector2(0.9999924, 24.000004)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VFX2:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.16666666, 0.22222222, 0.2777778),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [1.0471976, -0.17453292, 1.7453293]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VFX2:flip_h")
tracks/10/interp = 0
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.16666666, 0.22222222),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VFX2:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.22222222, 0.2777778, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_dxrf7"]
resource_name = "slash2"
length = 1.1111166
step = 0.055555556
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.22222222, 0.2777778, 0.33333334, 0.5, 0.72222775),
"transitions": PackedFloat32Array(0.5, 0.5, 1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(4, 11), Vector2(2, 10), Vector2(16, -7), Vector2(-1, -11), Vector2(6, -3), Vector2(1, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.22222222, 0.33333334, 0.5, 0.72222775),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1, 1),
"update": 0,
"values": [2.792526803190927, 3.429571980168858, -0.5235987755982988, 0.7853981633974483, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.22222222, 0.33333334, 0.5, 0.72222775),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1, 1),
"update": 0,
"values": [Vector2(0.8, 1.5), Vector2(0.8, 1.5), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VFX2:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VFX:visible")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VFX2:frame")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.33333334, 0.38888884, 0.44444442, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VFX2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.33333334, 0.3888889),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, -2.9802322e-08), Vector2(2, 7.0000005)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/HitArea2D:monitoring")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.16666667, 0.22222222, 0.33333334, 0.3888889),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite/HitArea2D:monitorable")
tracks/8/interp = 0
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.16666667, 0.22222222, 0.33333334, 0.3888889),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite/HitArea2D/CollisionShape2D:disabled")
tracks/9/interp = 0
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.16666667, 0.22222222, 0.33333334, 0.3888889),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VFX2:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.33333334, 0.3888889),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.7853982, 1.261873]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VFX2:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "method"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ComboTimer")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_thh7l"]
resource_name = "slash3"
length = 0.7222278
step = 0.055555556
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3333333, 0.44444442, 0.5555555, 0.6111111, 0.7222222),
"transitions": PackedFloat32Array(0.5, -2, 1, 1, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, -3), Vector2(-5, 2), Vector2(30, 2), Vector2(16, -2), Vector2(16, -2), Vector2(1, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.11111111, 0.5555555, 0.6111111, 0.7222222),
"transitions": PackedFloat32Array(0.5, 2, -2, 0.5, 0.5),
"update": 0,
"values": [0.0, 1.5707964, 1.361356816555577, 1.4835298641951802, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3333333, 0.44444442, 0.5555555, 0.6111111),
"transitions": PackedFloat32Array(0.5, 1, 1, 1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 0.5), Vector2(0.85, 1.5), Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HitArea2D:monitoring")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.38888887, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/HitArea2D:monitorable")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.38888887, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/HitArea2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.38888887, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.055555556, 0.3888889, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [20],
"method": &"add_damage"
}, {
"args": [],
"method": &"slash3_dash"
}, {
"args": [-20],
"method": &"add_damage"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VFX3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.33333334, 0.3888889, 0.5555556),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VFX3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.3888889, 0.44444445),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 1), Vector2(18, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite/HitArea2D/CollisionShape2D:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.33333334, 0.3888889, 0.44444445),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 2.5), Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite/HitArea2D/CollisionShape2D:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.33333334, 0.3888889, 0.44444445),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.5410520681182421, 0.0]
}

[sub_resource type="Animation" id="Animation_sa7wp"]
resource_name = "sword_return"
length = 0.3333389
step = 0.055555556
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2777778),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(4, 11), Vector2(1, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [2.6179938779914944, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.22222224, 0.2777778),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(0.8, 1.5), Vector2(1.2, 0.95), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HitArea2D/CollisionShape2D:disabled")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VFX:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/HitArea2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/HitArea2D:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4s8gn"]
_data = {
&"RESET": SubResource("Animation_4s8gn"),
&"parry": SubResource("Animation_1mmp0"),
&"slash": SubResource("Animation_0o58g"),
&"slash2": SubResource("Animation_dxrf7"),
&"slash3": SubResource("Animation_thh7l"),
&"sword_return": SubResource("Animation_sa7wp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0o58g"]
radius = 6.0
height = 16.0

[node name="Sword" type="Node2D" unique_id=998686569]
script = ExtResource("1_0o58g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1075178897]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_4s8gn")

[node name="ComboTimer" type="Timer" parent="." unique_id=1112712386]
wait_time = 0.1
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." unique_id=384808377]
wait_time = 0.9
one_shot = true

[node name="VFX" type="Sprite2D" parent="." unique_id=1890280727]
visible = false
texture = ExtResource("2_sa7wp")
offset = Vector2(20, 1)
hframes = 4
frame = 3

[node name="VFX2" type="Sprite2D" parent="." unique_id=375590144]
visible = false
rotation = 0.43633232
texture = ExtResource("2_4s8gn")
offset = Vector2(-15, -7)
flip_h = true
hframes = 4

[node name="VFX3" type="Sprite2D" parent="." unique_id=290232331]
visible = false
position = Vector2(13, 1)
scale = Vector2(1.78125, 1)
texture = ExtResource("8_r0p6s")

[node name="Sprite" type="Sprite2D" parent="." unique_id=534186031]
position = Vector2(1, -3)
texture = ExtResource("1_mumg7")

[node name="HitArea2D" type="Area2D" parent="Sprite" unique_id=967937272]
collision_layer = 256
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("2_4mytq")
damage = 30
metadata/_custom_type_script = "uid://cmy826k35rpkn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitArea2D" unique_id=1254902518]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_0o58g")
disabled = true
debug_color = Color(0.972549, 0, 0.27058825, 0.41960785)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
